# rimworld-save-to-modlist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  generate_modlist_from_save.py  pyproject.toml
tests/: sample-expected.csv  sample-expected.rwl  sample.rws  test_main.py
